--- a/app/assets/stylesheets/components/shop.scss
+++ b/app/assets/stylesheets/components/shop.scss
@@ -24,6 +24,10 @@
     margin-bottom: 24px;
   }
 
+  @media #{$medium-up} {
+    min-height: 700px; // for firefox
+  }
+
   @media #{$large-up} {
     padding-top: 0px;
   }
